--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - DEDM_Website_bootstrap4</title>
+  <title>嘉大數位系</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
